# ai-qa-rag-proto

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/ai_test_automation_proto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/atp/: cli.py
src/atp/rag/: rag_core.py
src/atp/web/: scrape.py
