[project]
name = "ai-test-automation-proto"
version = "0.1.0"
description = "AI-Powered Software Testing Automation App (AI Test Agent)"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=0.5.0",
  "langchain>=0.2.0",
  "langchain-community>=0.2.0",
  "langchain-text-splitters>=0.2.0",
  "langchain-chroma>=0.1.0",
  "langchain-ollama>=0.1.0",
  "pypdf>=4.0.0",
  "typer>=0.12.0",
  "rich>=13.0.0",

  "playwright>=1.45.0",
  "lxml>=5.0.0",
  "cssselect>=1.2.0",
]

[project.scripts]
atp = "atp.cli:app"

[tool.uv]
package = true
